ddd, swagger update
