# app/api/app/Factories/Contract/ContractFactory.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Factories;
+
+use App\Factories\IContractFactory;
+
+class ContractFactory implements IContractFactory
+{
+	public function __construct(IContractRepository $repository)
+	{
+
+	}
+
+	public function getContract($id = null)
+	{
+
+	}
+	
+}
