# app/api/app/Factories/Contract/IContractFactory.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Factories;
+
+interface IContractFactory
+{
+	
+	public function getContract($id = null);
+	
+}
