# app/api/app/Providers/AppServiceProvider.php
@@ -3,6 +3,8 @@
 namespace App\Providers;
 
 use Illuminate\Support\ServiceProvider;
+use App\Repositories\Contract;
+use App\Entities\Contract as ContractEntity;
 
 class AppServiceProvider extends ServiceProvider
 {
@@ -15,14 +17,20 @@ class AppServiceProvider extends ServiceProvider
     {
         if ($this->app->environment() == 'local') {
 
-        	$this->app->register('Wn\Generators\CommandsServiceProvider');
-            
+        	$this->app->register('Wn\Generators\CommandsServiceProvider');          
     	}
 
         $this->app->bind('SoapBox\Formatter\Formatter', function ($app, $array) {
 
             return \SoapBox\Formatter\Formatter::make($array, \SoapBox\Formatter\Formatter::ARR);
+        });
 
+        $this->app->bind(IContractRepository::class, function($app) {
+            // This is what Doctrine's EntityRepository needs in its constructor.
+            return new DoctrineContractRepository(
+                $this->app['em'],
+                $this->app['em']->getClassMetaData(ContractEntity::class)
+            );
         });
 
  
